--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="res/" kind="src" path="src"/>
-	<classpathentry kind="src" path="src/res"/>
+	<classpathentry excluding="" kind="src" path="src"/>
+	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
